# dpav

./: .gitignore  LICENSE  README.md  Snakegametest.py  audio device code.txt  audio.py  directpythonplatform.py  eric_window.py  getNote.py  graphcalc.py  paudio.py  piano.py  pic.npy  playsound.py  pyproject.toml  setup.cfg  test.py  test_audio.py  test_vbuffer.py  test_window.py  testinggitstuff  tests.py  utility.py  vbuffer.py  visual.py  waveTable.py  window.py  window_usage.py
.github/: CODEOWNERS
.github/workflows/: dpav.yml  python-app.yml
demos/: Canvas.py  FontTest.py  GameOfLife.py  Snakegametest.py  flashbang.py  graphcalc.py  julia.py  mididemo.py  piano.py  snakegame.py
demos/.ipynb_checkpoints/: GameOfLife-checkpoint.py  flashbang-checkpoint.py
dipy/: __init__.py  audio.py  utility.py  window.py
dipy/dipy_VibrantLabs.egg-info/: PKG-INFO  SOURCES.txt
docs/.ipynb_checkpoints/: introinstall-checkpoint.txt
docs/latex/: directpythonaudiovideo.aux  directpythonaudiovideo.fdb_latexmk  directpythonaudiovideo.fls  directpythonaudiovideo.idx  directpythonaudiovideo.ilg  directpythonaudiovideo.ind  directpythonaudiovideo.out  directpythonaudiovideo.tex  directpythonaudiovideo.toc
docs/source/: conf.py  dpav.rst  fundamentals.rst  index.rst
dpav/: __init__.py  audio.py  utility.py  vbuffer.py  window.py
dpav/.ipynb_checkpoints/: utility-checkpoint.py  vbuffer-checkpoint.py
dpav/prototypes/: video.py
examples/: custombuffer.py  mididemo.py  playsound.py  window_usage.py
tests/: audio_tests.py  tests.py  video_tests.py
(+13 files in other folders)
