[metadata]
name = dpav
version = 0.0.2
author = Vibrant Labs
author_email = clh9i@mtmail.mtsu.edu
description = A library that gives users direct access to audio/video io.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/The-krolik/dpav
project_urls =
    Bug Tracker = https://github.com/The-krolik/dpav/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
